# KolibriOS-AI

./: .config  .gitignore  AI_AGENTS_GUIDE.md  ANALYSIS_REPORT.md  BUILD_LOG.md  CONTRIBUTING.md  CONTRIBUTING_AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_GITHUB.md  conftest.py  pyproject.toml  pytest.ini  rustfmt.toml  worklog.md
.github/workflows/: ci.yml  release.yml
KolibriOS-AI/: BUILD_LOG.md
KolibriOS-AI/.github/workflows/: ci.yml
KolibriOS-AI/cells/ai_cell/src/: lib.rs
KolibriOS-AI/cells/io_cell/src/: lib.rs
KolibriOS-AI/cells/memory_cell/src/: grpc.rs
KolibriOS-AI/cells/process_cell/: Cargo.toml
KolibriOS-AI/cells/process_cell/src/: lib.rs
KolibriOS-AI/cells/processor_cell/: build.rs
KolibriOS-AI/cells/processor_cell/src/: lib.rs  task.rs
KolibriOS-AI/cells/protos/: memory_cell.proto
KolibriOS-AI/cnd_orchestrator/: cnd_orchestrator.py  pyproject.toml
KolibriOS-AI/docs/: ROADMAP.md  kolibrios_ai_living_cell_architecture_design.md
KolibriOS-AI/kernel/: Cargo.toml
KolibriOS-AI/kernel/src/: lib.rs
KolibriOS-AI/kernel/src/arch/: mod.rs
KolibriOS-AI/kernel/src/genes/: memory_gene.rs  mod.rs
KolibriOS-AI/kernel/src/mm/: mod.rs
KolibriOS-AI/kernel/src/neural_scheduler/: mod.rs
KolibriOS-AI/koli_lang/compiler/src/: type_check.rs
KolibriOS-AI/koli_lang/examples/: cell_demo.koli  comprehensive_test.koli  hello.koli
KolibriOS-AI/koli_lang/runtime/src/: lib.rs  value.rs
KolibriOS-AI/unified_ai_agent/core/: Cargo.toml
KolibriOS-AI/unified_ai_agent/core/src/: agent.rs  context.rs  lib.rs
apps/creative_assistant/: Cargo.toml
apps/creative_assistant/src/: brainstorming.rs  context.rs  image_suggestions.rs  lib.rs  llm_bridge.rs  main.rs  style.rs  writing.rs
apps/file_manager/: Cargo.toml
apps/file_manager/src/: context_analyzer.rs  file_index.rs  file_watcher.rs  grpc_client.rs  lib.rs  main.rs  storage_optimizer.rs  suggestions.rs
apps/gui/: Cargo.toml  pubspec.yaml
apps/gui/lib/: main.dart
apps/gui/lib/providers/: unified_mind_provider.dart
apps/gui/lib/services/: grpc_client.dart  unified_mind_client.dart
apps/gui/src/: adaptive.rs  animation.rs  components.rs  dashboard.rs  layout.rs  lib.rs  main.rs  mind_integration.rs  notifications.rs  theme.rs
apps/gui/tests/: gui_tests.rs
benches/: README.md  kernel_bench.rs  koli_lang_bench.rs  memory_cell_bench.rs
boot/: boot.asm
cells/ai_cell/: Cargo.toml
cells/ai_cell/src/: lib.rs
cells/io_cell/: Cargo.toml
cells/io_cell/src/: lib.rs
cells/memory_cell/: Cargo.toml  build.rs
cells/memory_cell/src/: diagnostics.rs  lib.rs  memory.rs  metrics.rs
cells/memory_cell/tests/: memory_cell_tests.rs
cells/network_cell/: Cargo.toml
cells/network_cell/src/: lib.rs
cells/process_cell/src/: lib.rs
cells/processor_cell/: Cargo.toml
cells/processor_cell/src/: cpu.rs  diagnostics.rs  grpc.rs  metrics.rs
cells/processor_cell/tests/: processor_cell_tests.rs
cells/protocols/: Cargo.toml
cells/protocols/src/: lib.rs
cells/protos/: cell_common.proto  cnd_orchestrator.proto  processor_cell.proto
cnd_orchestrator/: README.md  cnd_orchestrator.py  requirements.txt
cnd_orchestrator/tests/: test_cnd_orchestrator.py
docs/: IMPLEMENTATION_COMPLETE.md  RELEASE_READINESS.md  kolibrios_ai_technical_requirements.md  project_audit_2026-03-21.md
docs/analysis/: error_diagnosis.json  error_report.md  verification_results.json
docs/experiments/: ai_agent_learning_experiment.md  ai_agent_learning_experiment_20260321_205732.json  ai_agent_learning_experiment_20260321_211208.json  cell_communication_verification.json  resource_optimization_data.json  resource_optimization_experiment.md  unified_mind_nl_test.json
docs/test_reports/: gui_apps_functional_test.md  gui_apps_test_20260321_203224.json  kernel_cells_functional_test.md  kernel_cells_test_20260321_195347.json  kernel_cells_test_20260321_195440.json  unified_ai_agent_functional_test.md  unified_ai_agent_test_20260321_203507.json  unified_mind_test_20260321_200634.json  unified_mind_test_20260321_200721.json
docs/vm_setup/: README.md
experiments/: ai_agent_learning_experiment.py  resource_optimization_experiment.py  test_unified_mind_nl.py  verify_cell_communication.py
kernel/: Cargo.toml
kernel/src/: lib.rs
kernel/src/arch/: x86_64.rs
kernel/src/genes/: gene_trait.rs  io_gene.rs  memory_gene.rs  mod.rs  process_gene.rs
kernel/src/ipc/: mod.rs
kernel/src/sched/: mod.rs
kernel/src/security/: access_control.rs  capability.rs  mod.rs  sandbox.rs
kernel/tests/: kernel_tests.rs  security_tests.rs
koli_lang/: README.md
koli_lang/compiler/: Cargo.toml
koli_lang/compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs
koli_lang/compiler/tests/: koli_compiler_tests.rs  language_tests.rs
koli_lang/examples/: ai_demo.koli  simple_test.koli
koli_lang/runtime/: Cargo.toml
koli_lang/runtime/src/: ai_bridge.rs  gc.rs  lib.rs  vm.rs
scripts/: build_all.sh  build_apk.sh  build_docs.sh  build_iso.sh  create_release.sh  launch_vm.sh  run_tests.sh  setup_android_avd.sh  setup_vm.sh  verify_project.py
tests/functional/: gui_apps_test.py  kernel_cells_test.py  unified_ai_agent_test.py  unified_mind_test.py
unified_ai_agent/core/src/: commands.rs  memory.rs
unified_ai_agent/unified_mind/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
unified_ai_agent/unified_mind/communication/: __init__.py  grpc_client.py  message_bus.py
unified_ai_agent/unified_mind/context/: __init__.py  manager.py
unified_ai_agent/unified_mind/core/: __init__.py  config.py  state.py  unified_mind.py
unified_ai_agent/unified_mind/interface/: __init__.py  cli.py
unified_ai_agent/unified_mind/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  llama_client.py  ollama_client.py  openai_client.py
unified_ai_agent/unified_mind/tests/: conftest.py  test_all_llm_clients.py  test_communication.py  test_llm_clients.py  test_unified_mind.py
vm/: Cargo.toml
vm/src/: cpu.rs  device.rs  lib.rs  memory.rs  mod.rs  qemu.rs  vmm.rs
