[package]
name = "kolibrios-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KolibriOS AI Living Kernel"

[lib]
name = "kolibrios_kernel"
path = "src/lib.rs"

[dependencies]
# no_std compatible dependencies only
serde = { workspace = true, optional = true }
log = { workspace = true, optional = true }
spin = "0.9"  # no_std mutex

# Security subsystem dependencies
# Note: Using alloc for collections in no_std environment

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
uart_16550 = "0.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = "0.0.10"

[features]
default = []
debug_assertions = []
self_healing = []
ai_integration = []
neural_scheduler = []
security_audit = []  # Enable detailed security audit logging
serde_support = ["serde"]
logging = ["log"]

[dev-dependencies]
proptest = { workspace = true }
