[package]
name = "creative-assistant"
version = "0.1.0"
edition = "2021"
description = "Creative Assistant - A living application for AI-powered creative tasks"
authors = ["KolibriOS AI Team"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC for Unified Mind integration
tonic = "0.12"
prost = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regex for text processing
regex = "1.10"

# Local dependencies
kolibri-protocols = { path = "../../cells/protocols" }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "creative-assistant"
path = "src/main.rs"

[lib]
name = "creative_assistant"
path = "src/lib.rs"
