[package]
name = "ai_cell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Cell - Native AI inference engine for KolibriOS AI"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = []
gpu_acceleration = []
quantization = []
