[package]
name = "network_cell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Network Cell - Intelligent networking stack for KolibriOS AI"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = []
