[package]
name = "processor_cell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Processor Cell - CPU management for KolibriOS AI"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { version = "1.35", features = ["full"] }

# gRPC dependencies
tonic = "0.10"
prost = "0.12"

# Prometheus metrics
prometheus = "0.14"
lazy_static = "1.4"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# System information
sysinfo = "0.30"
num_cpus = "1.16"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
