[package]
name = "koli-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Koli Language Compiler - AI-first programming language for KolibriOS"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
