[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-mind"
version = "0.1.0"
description = "Unified Mind AI Agent for KolibriOS AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KolibriOS AI Team"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Operating System",
]

dependencies = [
    "asyncio-compat>=0.1.0",
    "loguru>=0.7.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
llm = [
    "google-generativeai>=0.3.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.1.0",
]
local-llm = [
    "llama-cpp-python>=0.2.0",
]
web = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
all = [
    "unified-mind[llm,local-llm,web,dev]",
]

[project.scripts]
unified-mind = "unified_mind.main:main"
kolibri = "unified_mind.main:main"

[project.urls]
Homepage = "https://github.com/jascabobarbro-pixel/KolibriOS-AI"
Documentation = "https://github.com/jascabobarbro-pixel/KolibriOS-AI#readme"
Repository = "https://github.com/jascabobarbro-pixel/KolibriOS-AI"
Issues = "https://github.com/jascabobarbro-pixel/KolibriOS-AI/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "google.*",
    "llama_cpp",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["unified_mind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
