[package]
name = "process_cell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process Cell - Autonomous process management for KolibriOS AI"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[features]
default = []
