[package]
name = "unified-ai-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified AI Agent - Central AI orchestration for KolibriOS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
async = ["tokio"]
